--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,20 +1,20 @@
     *, *:before, *:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
     }
 
     body {
-    font-family: 'Josefin Sans', sans-serif;
-    color: #384047;
+        font-family: 'Josefin Sans', sans-serif;
+        color: #384047;
     }
 
     form {
-    max-width: 300px;
-    margin: 10px auto;
-    padding: 10px 20px;
-    background: #f4f7f8;
-    border-radius: 8px;
+        max-width: 300px;
+        margin: 10px auto;
+        padding: 10px 20px;
+        background: #f4f7f8;
+        border-radius: 8px;
     }
 
     input[type="text"],
@@ -31,25 +31,25 @@
     input[type="button"],
     textarea,
     select {
-    background: rgba(255,255,255,0.1);
-    border: none;
-    font-size: 16px;
-    height: auto;
-    margin: 0;
-    outline: 0;
-    padding: 15px;
-    width: 100%;
-    background-color: #e8eeef;
-    color: #666699;
-    box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
-    margin-bottom: 30px;
-    font-family: Josefin Sans, sans-serif;
+        background: rgba(255,255,255,0.1);
+        border: none;
+        font-size: 16px;
+        height: auto;
+        margin: 0;
+        outline: 0;
+        padding: 15px;
+        width: 100%;
+        background-color: #e8eeef;
+        color: #666699;
+        box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+        margin-bottom: 30px;
+        font-family: Josefin Sans, sans-serif;
     }
 
     select {
-    padding: 6px;
-    height: 32px;
-    border-radius: 2px;
+        padding: 6px;
+        height: 32px;
+        border-radius: 2px;
     }
 
     input[type="submit"] {
@@ -75,6 +75,7 @@
         font-weight: 100;
         line-height: 26.4px;
         text-align: center;
+        padding-top: 20px;
     }
     h2 {
     	font-family: Josefin Sans;
@@ -93,11 +94,19 @@
     	line-height: 15.4px;
     }
 
+    .main {
+        text-align: center;
+        margin-bottom: 40px;
+    }
+
+    #main-header {
+        background-color: white;
+    }
+
     @media screen and (min-width: 480px) {
 
     form {
-      max-width: 720px;
-    }
+        max-width: 720px;
     }
 
     button {
