--- a/assets/css/flickity-responsive.css
+++ b/assets/css/flickity-responsive.css
@@ -2,6 +2,9 @@
 
 .carousel {
   background: #EEE;
+  -webkit-box-shadow: 0 8px 6px -6px black;
+     -moz-box-shadow: 0 8px 6px -6px black;
+          box-shadow: 0 8px 6px -6px black;
 }
 
 .carousel img {
