--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -16,11 +16,11 @@
         border-radius: 8px;
     }
 
-    .form {
+    /* .form {
         background-image: url("images/autumn.jpg");
         background-position: center;
         background-size: cover;
-    }
+    } */
 
     input[type="text"],
     input[type="password"],
